tekton-pipelines/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tekton-dashboard-route
  namespace: tekton-pipelines
spec:
  parentRefs:
    - name: main-gateway
      sectionName: https
      namespace: infrastructure
      kind: Gateway
  hostnames:
    - tekton.home.cloudpoet.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tekton-dashboard
          port: 9097
